# gepetto

./: Cargo.toml  README.md
crates/gepetto/: Cargo.toml
crates/gepetto/src/: lib.rs
src/: config.rs  io.rs  lib.rs  main.rs  template.rs  validation.rs
src/commands/: mod.rs  new.rs
template/: Cargo.toml  LICENSE  README.md
template/.github/workflows/: build-test-and-benchmark.yml
template/programs/counter-pinocchio/: Cargo.toml
template/programs/counter-pinocchio/benches/: compute_units.rs
template/programs/counter-pinocchio/src/: entrypoint.rs  helpers.rs  lib.rs
template/programs/counter-pinocchio/src/instructions/: create.rs  increase.rs  mod.rs
template/programs/counter-pinocchio/src/state/: counter.rs  mod.rs  utils.rs
template/programs/counter-pinocchio/tests/: mollusk_tests.rs
templates/: lib.rs.template
